# georgia_flats_bot

./: README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  constants.py
app/bot/: bot.py
app/bot/dialogues/: __init__.py  city.py  price.py
app/bot/handlers/: city.py  info.py  message.py  price.py  start.py
app/db/: models.py
